package com.example.fitcoach.adapters;

import android.content.Context;
import android.view.LayoutInflater;
import android.view.View;
import android.view.ViewGroup;
import android.widget.CheckBox;
import android.widget.TextView;
import android.widget.Toast;

import androidx.annotation.NonNull;
import androidx.recyclerview.widget.RecyclerView;

import com.example.fitcoach.R;
import com.example.fitcoach.models.Stats;
import com.example.fitcoach.models.WorkoutTraining;
import com.example.fitcoach.services.DatabaseService;
import com.example.fitcoach.utils.SharedPreferencesUtil;

import java.util.List;

public class WorkoutChecklistAdapter extends RecyclerView.Adapter<WorkoutChecklistAdapter.WorkoutViewHolder> {

    private final Context context;
    private final String userId;
    private List<WorkoutTraining> workoutList;
    private OnWorkoutStatusChangeListener listener;

    public interface OnWorkoutStatusChangeListener {
        void onStatusChanged();
    }

    public WorkoutChecklistAdapter(Context context, List<WorkoutTraining> workoutList) {
        this.context = context;
        this.workoutList = workoutList;
        this.userId = SharedPreferencesUtil.getUserId(context);
    }

    public void setOnWorkoutStatusChangeListener(OnWorkoutStatusChangeListener listener) {
        this.listener = listener;
    }

    @NonNull
    @Override
    public WorkoutViewHolder onCreateViewHolder(@NonNull ViewGroup parent, int viewType) {
        View view = LayoutInflater.from(parent.getContext()).inflate(R.layout.item_workout_checklist, parent, false);
        return new WorkoutViewHolder(view);
    }

    @Override
    public void onBindViewHolder(@NonNull WorkoutViewHolder holder, int position) {
        WorkoutTraining workout = workoutList.get(position);
        holder.bind(workout, context, userId, listener);
    }

    @Override
    public int getItemCount() {
        return workoutList != null ? workoutList.size() : 0;
    }

    public void setWorkoutList(List<WorkoutTraining> workouts) {
        this.workoutList = workouts;
        notifyDataSetChanged();
    }

    static class WorkoutViewHolder extends RecyclerView.ViewHolder {
        final TextView tvExerciseName;
        final CheckBox cbDone;

        public WorkoutViewHolder(@NonNull View itemView) {
            super(itemView);
            tvExerciseName = itemView.findViewById(R.id.tv_exercise_name);
            cbDone = itemView.findViewById(R.id.cb_done);
        }

        public void bind(final WorkoutTraining workout, Context context, String userId, OnWorkoutStatusChangeListener listener) {
            tvExerciseName.setText(workout.getName());

            List<String> completedIds = SharedPreferencesUtil.getCompletedWorkouts(context);
            
            // Set initial state without triggering listener
            cbDone.setOnCheckedChangeListener(null);
            cbDone.setChecked(completedIds.contains(workout.getId()));

            cbDone.setOnCheckedChangeListener((buttonView, isChecked) -> {
                int caloriesPerExercise = workout.getCaloriesPerSet() * workout.getSets();
                
                // Get current stats
                Stats stats = SharedPreferencesUtil.getStats(context);
                
                if (isChecked) {
                    // Prevent double adding if already in list
                    if (!SharedPreferencesUtil.getCompletedWorkouts(context).contains(workout.getId())) {
                        stats.setCalories(stats.getCalories() + caloriesPerExercise);
                        SharedPreferencesUtil.addCompletedWorkout(context, workout.getId());
                    }
                } else {
                    // Prevent double subtracting if not in list
                    if (SharedPreferencesUtil.getCompletedWorkouts(context).contains(workout.getId())) {
                        stats.setCalories(Math.max(0, stats.getCalories() - caloriesPerExercise));
                        SharedPreferencesUtil.removeCompletedWorkout(context, workout.getId());
                    }
                }

                // SAVE BOTH LOCALLY
                SharedPreferencesUtil.saveStats(context, stats);

                // SYNC WITH FIREBASE
                if (userId != null) {
                    DatabaseService.getInstance().saveStats(userId, stats, null);
                }

                Toast.makeText(context, isChecked ? "נוספו " + caloriesPerExercise + " קלוריות" : "בוטל", Toast.LENGTH_SHORT).show();
                
                if (listener != null) {
                    listener.onStatusChanged();
                }
            });
        }
    }
}
